[package]
categories  = [ "rust-patterns" ]
description = "Macro to add loops and conditions over fragments"
edition     = "2024"
license     = "MIT OR Apache-2.0"
name        = "macro_loop"
readme      = "../README.md"
repository  = "https://github.com/Noam2Stein/macro-loop"
version     = "0.1.0"

[lib]
proc-macro = true

[dependencies]
derive-quote-to-tokens = "0.1.1"
derive-syn-parse       = "0.2.0"
proc-macro2            = "1.0.95"
quote                  = "1.0.40"
syn                    = { version = "2.0.104", features = [ "full" ] }
