[package]
categories  = [ "rust-patterns" ]
description = "A macro for writing repetitive Rust code using loops, conditionals, and bindings"
edition     = "2024"
license     = "MIT OR Apache-2.0"
name        = "macro_loop"
readme      = "../README.md"
repository  = "https://github.com/Noam2Stein/macro-loop"
version     = "0.4.4-deprecated"

[lib]
proc-macro = true

[dependencies]
derive-quote-to-tokens = "0.1.1"
derive-syn-parse       = "0.2.0"
derive_more            = { version = "2.0.1", features = [ "display" ] }
proc-macro2            = "1.0.95"
quote                  = "1.0.40"
syn                    = { version = "2.0.104", features = [ "full" ] }
